--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
         <title>Css Learning</title>
     </head>
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/css">
+        body {
+        font-family: Arial;
+        background-color: rgb(216, 144, 96);}
+        h1 {
+        color: rgb(255,255,255);}
+    </style>
     <body>
         <header>
             <h1>Css Learning</h1>
@@ -10,11 +17,7 @@
                 <ul>
                     <li>
                         <a class="text-color-red"> 
-                        <a href=""> about</a>
-                    </li>
-                    <li>
-                        <a class="text-color-red"> 
-                        <a href=""> donate</a>
+                        <a href="google.com"> Google</a>
                     </li>
                 </ul>
             </nav>
@@ -22,10 +25,12 @@
         <main>
             <article>
                 <section>
-                    <p class="p-border"></p>
+                    <h2>CSS treats each HTML element as if it appears inside its own box and uses rules to indicate how that element should look.</h2> 
+                    <h2>Different types of selectors allow you to target your rules at different elements</h2>
+                    <h2>CSS rules usually appear in a separate document, although they may appear within an HTML page.</h2>
                 </section>
                 <section>
-                  <img src="" alt="">
+                  <img id="center" src="http://www.w3big.com/images/box-model.gif" alt="">
                 </section>
             </article>
         </main>
